--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <p>Project 3-Form</p>
       <hr>
       <a href="https://jessicadollz.github.io/Form/" target="large_view">
-        <img src="https://github.com/Jessicadollz/Image_Viewer_WT-2/blob/master/Slide1.JPG?raw=true" alt="Basic Form">
+        <img src="Slide1.JPG" alt="Basic Form">
         <hr>
       </a>
       <p>Project 4-Tribute</p>
