--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <p>Project 1-Resume</p>
         <hr>
       <a href="https://jessicadollz.github.io/Resume-A1/Index.html" target="large_view">
-        <img src="https://github.com/Jessicadollz/Image_Viewer_WT-2/blob/master/Slide3.JPG?raw=true" alt="For Resume Demo">
+        <img src="Slide3.JPG" alt="For Resume Demo">
         <hr>
     </a>
       <p>Project 2-Photo cat App</p>
       <hr>
       <a href="https://jessicadollz.github.io/The-Cat-Photo-App/index.html" target="large_view">
-        <img src="https://github.com/Jessicadollz/Image_Viewer_WT-2/blob/master/Slide2.JPG?raw=true" alt="Cat Photo App">  
+        <img src="Slide2.JPG" alt="Cat Photo App">  
         <hr>
       </a>
       <p>Project 3-Form</p>
@@ -75,7 +75,7 @@
       <p>Project 4-Tribute</p>
       <hr>
       <a href="https://jessicadollz.github.io/Tribute_Page/index.html" target="large_view">
-        <img src="https://github.com/Jessicadollz/Image_Viewer_WT-2/blob/master/Slide4.JPG?raw=true" alt="Tribute Page">
+        <img src="Slide4.JPG" alt="Tribute Page">
         <hr>
       </a>
     </div>
